2005-03-30  Michael Koch  <konqueror@gmx.de>

	* gnu/xml/aelfred2/XmlParser.java:
	Revert my typo fix.

2005-03-30  Michael Koch  <konqueror@gmx.de>

	* java/awt/geom/CubicCurve2D.java,
	java/awt/geom/QuadCurve2D.java:
	Fixed typo in name of Brian Cough.

2005-03-29  Guilhem Lavaux  <guilhem@kaffe.org>

	* native/jni/java-nio/gnu_java_nio_VMSelector.c
	(Java_gnu_java_nio_VMSelector_select): Use GetStaticMethodID
	for Thread.interrupted().
		
2005-03-29  Jeroen Frijters  <jeroen@frijters.net>

	* gnu/classpath/SystemProperties.java (static): Converted encoding
	aliases	to lower case and removed redudant aliases.
	* gnu/java/io/EncodingManager.java
	(findEncoderConstructor, findDecoderConstructor): Call new method
	resolveAlias().
	(resolveAlias): New method.
	* java/lang/System.java (getProperties): Removed uppercase aliases
	from comments.

2005-03-28  Tom Tromey  <tromey@redhat.com>

	* java/net/URL.java (DEFAULT_SEARCH_PATH): Added
	org.metastatic.jessie.

2005-03-28  Tom Tromey  <tromey@redhat.com>

	* java/lang/ClassLoader.java (loadClass): Resolve class even if
	it was already found.

2005-03-28  Sven de Marothy  <sven@physto.se>

	* gnu/java/io/decode/DecoderUnicodeBig.java,
	* gnu/java/io/decode/DecoderUnicodeLittle.java,
	* gnu/java/io/encode/EncoderUnicodeBig.java,
	* gnu/java/io/encode/EncoderUnicodeLittle.java:
        New files.

2005-03-26  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* doc/hacking.texinfo:
	Added note on reserved word usage.
	
2005-03-26  Dalibor Topic  <robilad@kaffe.org>

	* native/jni/java-nio/gnu_java_nio_VMSelector.c:
        Moved include statement for config.h to the top to
        fix the build on Darwin6.

        Reported by:  Riccardo Mottola <zuse@libero.it>

2005-03-26  Dalibor Topic  <robilad@kaffe.org>

        * native/jni/java-nio/gnu_java_nio_VMSelector.c:
        Include <sys/types.h> to fix build on OS X.

        Reported by: Michael Franz <mvfranz@gmail.com>

2005-03-26  Ito Kazumitsu  <kaz@maczuka.gcd.org>
